@@ -1,3 +1,4 @@
+* Add warehouse properties to move
 * Allow view location as parent of warehouse
 
 Version 6.0.0 - 2021-05-03
